# wordle_song_maisy

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/wordle_mhs2229/: wordle_mhs2229.py
tests/: test_wordle_mhs2229.py
wordle_mhs2229/: README.md  pyproject.toml
wordle_mhs2229/.github/workflows/: ci-cd.yml
wordle_mhs2229/src/wordle_mhs2229/: __init__.py
wordle_mhs2229/tests/: test_wordle_mhs2229.py
